# dart_falcon

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  M1-SIGN-OFF.md  README.md  ROADMAP.md  devenv.nix  devenv.yaml  falcon.json  flake.nix
crates/falcon_analyze/: Cargo.toml
crates/falcon_analyze/src/: context.rs  cross_file.rs  lib.rs  parallel.rs  project.rs  registry.rs  rule.rs  suppressions.rs  visitor.rs
crates/falcon_analyze/src/resolve/: library.rs  local_types.rs  mod.rs  project_index.rs  receiver.rs  type_index.rs
crates/falcon_analyze/tests/: analyze_tests.rs
crates/falcon_cli/: Cargo.toml
crates/falcon_cli/src/: analyze_pipeline.rs  args.rs  file_walker.rs  lib.rs  logging.rs  migrate.rs  output.rs  run.rs
crates/falcon_cli/tests/: cli_tests.rs  logging_tests.rs  migrate_tests.rs  pipeline_tests.rs  walker_tests.rs
crates/falcon_cli/tests/snapshots/: pipeline_tests__output_json_empty_snapshot.snap  pipeline_tests__output_text_empty_snapshot.snap
crates/falcon_dart_parser/: Cargo.toml
crates/falcon_dart_parser/benches/: parser_bench.rs
crates/falcon_dart_parser/examples/: parse_probe.rs
crates/falcon_dart_parser/src/: grammar.md  lexer.rs  lib.rs
crates/falcon_dart_parser/src/parser/: decl.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  types.rs
crates/falcon_dart_parser/tests/: class_member_tests.rs  corpus_tests.rs  decl_gap_tests.rs  decl_tests.rs  directive_tests.rs  expr_gap_tests.rs  expr_tests.rs  function_type_tests.rs  interpolation_tests.rs  lexer_gap_tests.rs  lexer_tests.rs  member_gap_tests.rs  parser_tests.rs  pattern_gap_tests.rs  pattern_tests.rs  stmt_gap_tests.rs  stmt_tests.rs
crates/falcon_dart_parser/tests/snapshots/: parser_tests__snap_abstract_class_with_getter.snap  parser_tests__snap_annotation_with_args.snap  parser_tests__snap_async_function.snap  parser_tests__snap_class_extends_with_implements.snap  parser_tests__snap_class_simple.snap  parser_tests__snap_class_with_field_and_method.snap  parser_tests__snap_collection_for.snap  parser_tests__snap_const_class_field.snap  parser_tests__snap_enum_simple.snap  parser_tests__snap_enum_with_members.snap  parser_tests__snap_extension.snap  parser_tests__snap_factory_constructor.snap  parser_tests__snap_generic_function.snap  parser_tests__snap_import_directive.snap  parser_tests__snap_late_final_field.snap  parser_tests__snap_mixin_declaration.snap  parser_tests__snap_named_constructor.snap  parser_tests__snap_record_return_type.snap  parser_tests__snap_sealed_class.snap  parser_tests__snap_switch_expression.snap  parser_tests__snap_switch_pattern_guard.snap  parser_tests__snap_top_level_function.snap  parser_tests__snap_typed_list_literal.snap  parser_tests__snap_typedef_function.snap  parser_tests__snap_typedef_function_type.snap
crates/falcon_lsp/: Cargo.toml
crates/falcon_lsp/src/: lib.rs  server.rs  state.rs
crates/falcon_lsp/tests/: cross_file_rules_tests.rs  incremental_tests.rs  lsp_tests.rs  project_rules_tests.rs
crates/falcon_rules/: Cargo.toml
crates/falcon_rules/benches/: rules_bench.rs
crates/falcon_rules/docs/: rule_specs.md
crates/falcon_rules/src/: cross_file.rs  dart_code_linter.rs  lib.rs  lint.rs  member_order.rs  meta.rs  project.rs  schema.rs
crates/falcon_rules/src/cross_file/: unnecessary_nullable.rs  unused_code.rs  unused_files.rs
crates/falcon_rules/src/dart_code_linter/: avoid_dynamic.rs  avoid_global_state.rs  avoid_ignoring_return_values.rs  avoid_late_keyword.rs  avoid_nested_conditional_expressions.rs  avoid_non_null_assertion.rs  avoid_passing_async_when_sync_expected.rs  avoid_redundant_async.rs  avoid_returning_widgets.rs  avoid_throw_in_catch_block.rs  avoid_top_level_member_access.rs  avoid_unnecessary_type_assertions.rs  avoid_unnecessary_type_casts.rs  avoid_unrelated_type_assertions.rs  avoid_unused_parameters.rs  binary_expression_operand_order.rs  double_literal_format.rs  format_comment.rs  member_ordering.rs  newline_before_return.rs  no_boolean_literal_compare.rs  no_empty_block.rs  no_equal_arguments.rs  no_equal_then_else.rs  no_magic_number.rs  no_object_declaration.rs  prefer_async_await.rs  prefer_conditional_expressions.rs  prefer_const_border_radius.rs  prefer_correct_edge_insets_constructor.rs  prefer_correct_identifier_length.rs  prefer_correct_type_name.rs  prefer_extracting_callbacks.rs  prefer_first.rs  prefer_immediate_return.rs  prefer_iterable_of.rs  prefer_last.rs  prefer_moving_to_variable.rs  prefer_trailing_comma.rs  use_design_system_item.rs
crates/falcon_rules/src/lint/: complexity.rs  correctness.rs  performance.rs  style.rs  suspicious.rs
crates/falcon_rules/src/project/: unnecessary_nullable.rs  unused_code.rs  unused_files.rs
crates/falcon_rules/src/pyramid_lint/: avoid_abbreviations_in_doc_comments.rs  avoid_empty_blocks.rs  avoid_inverted_boolean_expressions.rs  avoid_mutable_global_variables.rs  avoid_nested_if.rs  avoid_unused_parameters.rs  (+31 more)
crates/falcon_rules/tests/: corpus_tests.rs  meta_tests.rs  root_config_tests.rs  suppression_tests.rs
crates/jdlint_analyze/: Cargo.toml
crates/jdlint_analyze/src/: context.rs  lib.rs  parallel.rs  registry.rs  rule.rs  visitor.rs
crates/jdlint_analyze/tests/: analyze_tests.rs
crates/jdlint_cli/: Cargo.toml
crates/jdlint_cli/src/: analyze_pipeline.rs  args.rs  file_walker.rs  lib.rs  logging.rs  output.rs  run.rs
crates/jdlint_cli/tests/: cli_tests.rs  logging_tests.rs  pipeline_tests.rs  walker_tests.rs
crates/jdlint_dart_parser/: Cargo.toml
crates/jdlint_dart_parser/benches/: parser_bench.rs
crates/jdlint_dart_parser/src/: grammar.md  lexer.rs  lib.rs  parser.rs
crates/jdlint_dart_parser/tests/: corpus_tests.rs  lexer_tests.rs  parser_tests.rs
crates/jdlint_lsp/: Cargo.toml
crates/jdlint_lsp/src/: lib.rs  server.rs
crates/jdlint_rules/: Cargo.toml
crates/jdlint_rules/docs/: rule_specs.md
crates/jdlint_rules/src/: dart_code_linter.rs  lib.rs  pyramid_lint.rs
extensions/falcon-zed/: Cargo.toml  README.md  extension.toml
extensions/falcon-zed/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+801 files in other folders)
