[workspace]
members = [".", "crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jacob Sanderson"]
license = "MIT"

[workspace.dependencies]
# Diagnostics & reporting
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"

# Parallel execution
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }
glob = "0.3"
walkdir = "2"
tempfile = "3"

# String similarity
strsim = "0.10"

# Tracing & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[package]
name = "jdlint"
version.workspace = true
edition.workspace = true
description = "A fast Dart linter built in Rust"

[dependencies]
jdlint_cli = { path = "crates/jdlint_cli" }

[[bin]]
name = "jdlint"
path = "src/main.rs"
