[workspace]
members = [".", "crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Jacob Sanderson"]
license = "MIT"

[workspace.dependencies]
# Diagnostics & reporting
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"

# Parallel execution
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }
glob = "0.3"
walkdir = "2"
tempfile = "3"

# String similarity
strsim = "0.10"

# Regex (format-comment rule: ignored_patterns option)
regex = "1"

# Tracing & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[package]
name = "dart_falcon"
version.workspace = true
edition.workspace = true
description = "A fast Dart linter built in Rust"

[dependencies]
falcon_cli = { path = "crates/falcon_cli" }

[dev-dependencies]
criterion.workspace = true
falcon_analyze = { path = "crates/falcon_analyze" }
falcon_config = { path = "crates/falcon_config" }
falcon_dart_parser = { path = "crates/falcon_dart_parser" }
falcon_diagnostics = { path = "crates/falcon_diagnostics" }
falcon_rules = { path = "crates/falcon_rules" }

[[bin]]
name = "falcon"
path = "src/main.rs"

[[bench]]
name = "jfit_mobile_bench"
harness = false

# Debug symbols in bench builds so `cargo flamegraph --bench` resolves frames
# without slowing the optimized code (M6.1 profiling setup).
[profile.bench]
debug = true
