[package]
name = "falcon_lsp"
version.workspace = true
edition.workspace = true
description = "LSP server implementation (JSON-RPC 2.0 / LSP 3.17) for falcon"

[dependencies]
falcon_analyze = { path = "../falcon_analyze" }
falcon_diagnostics = { path = "../falcon_diagnostics" }
falcon_config = { path = "../falcon_config" }
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
