[package]
name = "falcon_rules"
version.workspace = true
edition.workspace = true
description = "Lint rules for falcon, the Dart linter"

[dependencies]
falcon_syntax = { path = "../falcon_syntax" }
falcon_dart_parser = { path = "../falcon_dart_parser" }
falcon_analyze = { path = "../falcon_analyze" }
falcon_diagnostics = { path = "../falcon_diagnostics" }
falcon_config = { path = "../falcon_config" }
regex = { workspace = true }

[dev-dependencies]
# In-process golden-corpus runner (tests/corpus_tests.rs) parses fixtures directly.
falcon_dart_parser = { path = "../falcon_dart_parser" }
serde_json = { workspace = true }
criterion = { workspace = true }
falcon_analyze = { path = "../falcon_analyze" }
falcon_config = { path = "../falcon_config" }

[[bench]]
name = "rules_bench"
harness = false
