[package]
name = "jdlint_cli"
version.workspace = true
edition.workspace = true
description = "CLI argument parsing and command dispatch for jdlint"

[dependencies]
jdlint_analyze = { path = "../jdlint_analyze" }
jdlint_diagnostics = { path = "../jdlint_diagnostics" }
jdlint_config = { path = "../jdlint_config" }
jdlint_rules = { path = "../jdlint_rules" }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glob.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
