[package]
name = "jdlint_dart_parser"
version.workspace = true
edition.workspace = true
description = "Hand-rolled Dart 3.x recursive-descent parser for jdlint"

[dependencies]
jdlint_syntax = { path = "../jdlint_syntax" }
tracing.workspace = true

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false
