[package]
name = "jdlint_rules"
version.workspace = true
edition.workspace = true
description = "Ported lint rules from dart_code_linter and pyramid_lint"

[dependencies]
jdlint_syntax = { path = "../jdlint_syntax" }
jdlint_analyze = { path = "../jdlint_analyze" }
jdlint_diagnostics = { path = "../jdlint_diagnostics" }
jdlint_config = { path = "../jdlint_config" }
